crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__boolean_equals_list_nullable@outer_null_is_not_true.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NullableBoolean(
        NullableBooleanFilter(not IsTrue),
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Boolean,
            },
        ),
        nullable: true,
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      null,
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      false,
      false,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      null,
      BooleanArray
    [
      false,
      false,
    ],
    ],
}
